# cracking-the-code-interview

./: CMakeLists.txt  newproject.py
1-arrays-and-strings/1.8-isrotation/: CMakeLists.txt  isrotation.c
2-linked-lists/2.1-remove-duplicates-unsorted/: CMakeLists.txt  common.c  common.h  rmdupunsorted1.c  rmdupunsorted2.c
2-linked-lists/2.2-kth-to-last-element/: CMakeLists.txt  kthtolastelement1.c  kthtolastelement2.c  kthtolastelement3.c
2-linked-lists/2.3-delete-middle-element/: CMakeLists.txt  delmidelement.c
2-linked-lists/2.4-list-partition-around-x/: CMakeLists.txt  listpartition1.c  listpartition2.c
2-linked-lists/2.5-sum-two-numbers/: CMakeLists.txt  sum1.c  sum2.c  tc1.txt
empty-project/: CMakeLists.txt  empty.c
util/: utilcci.c  utilcci.cmake  utilcci.h
utilcc/: CMakeLists.txt  utilcci.c
