CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(rmdupunsorted C)

ADD_DEFINITIONS("-DDEBUG")

SET(CMAKE_C_FLAGS "-g -O0 -Wall")

ADD_EXECUTABLE("${PROJECT_NAME}1" ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}1)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}1 utilcc)	

ADD_EXECUTABLE("${PROJECT_NAME}2" ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}2)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}2 utilcc)	
	
