CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(listpartition C)

SET(BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

ADD_DEFINITIONS("-DDEBUG")

ADD_EXECUTABLE("${PROJECT_NAME}1" ${BASE_DIR}/${PROJECT_NAME}1)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}1 utilcc)	

ADD_EXECUTABLE("${PROJECT_NAME}2" ${BASE_DIR}/${PROJECT_NAME}2)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}2 utilcc)	
	
