CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(sum C)

SET(BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

ADD_DEFINITIONS("-DDEBUG")

INCLUDE("${BASE_DIR}/../../util/utilcci.cmake")

SET(CMAKE_C_FLAGS "-g -O0 -Wall")

ADD_EXECUTABLE("${PROJECT_NAME}1" ${BASE_DIR}/${PROJECT_NAME}1.c ${UTILCCI_SRC})
ADD_EXECUTABLE("${PROJECT_NAME}2" ${BASE_DIR}/${PROJECT_NAME}2.c ${UTILCCI_SRC})
	
